--- a/source/404/index.html
+++ b/source/404/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>404</title>
+		<title>页面暂时飞走了</title>
 	</head>
 	<body>
 		<script type="text/javascript" 			  src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8"></script>
